<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="app_portfolio_menu_title">My Nanodegree Apps!</string>

    <!-- App names in portfolio -->
    <string name="popular_movies_app_name">Popular Movies</string>
    <string name="stock_hawk_app_name">Stock Hawk</string>
    <string name="build_it_bigger_app_name">Build It Bigger</string>
    <string name="make_your_app_material_app_name">Make Your App Material</string>
    <string name="go_ubiquitous_app_name">Go Ubiquitous</string>
    <string name="capstone_app_name">Capstone</string>

    <string name="app_menu_toast_message">This button will launch my %1$s app!</string>
</resources>
