<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AppGalleryActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_portfolio_menu_title"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/popular_movies_app_name"
        android:id="@+id/popular_movies_app_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/stock_hawk_app_name"
        android:id="@+id/stock_hawk_app_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/build_it_bigger_app_name"
        android:id="@+id/build_it_bigger_app_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/make_your_app_material_app_name"
        android:id="@+id/make_your_app_material_app_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/go_ubiquitous_app_name"
        android:id="@+id/go_ubiquitous_app_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/capstone_app_name"
        android:id="@+id/capstone_app_btn"/>

</LinearLayout>
